<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_bake"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_message_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/large_padding"
            android:textSize="20sp"
            android:visibility="invisible" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
