<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginBottom="10dp"
        />

    <ImageView
        android:id="@+id/thumbImage"
        android:layout_gravity="center"
        android:paddingRight="15dp"
        android:elevation="1dp"
        android:scaleType="fitXY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:id="@+id/recipe_step_detail_text"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp">

        <Button
            android:id="@+id/previousStep"
            android:padding="40dp"
            android:elevation="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/ic_skip_previous_black_24dp" />

        <Button
            android:id="@+id/nextStep"
            android:padding="40dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_skip_next_black_24dp" />
    </LinearLayout>

</LinearLayout>